correction in calculator names and changed video height on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,11 @@
 .main-video {
   width: 100%;
   height: 100%;
-
   object-fit: cover;
+}
+
+@media (max-width: 400px) {
+  .video-container {
+    height: 70vh;
+  }
 }
