--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -124,3 +124,9 @@
   display: flex;
   align-items: center;
 }
+
+@media (max-width: 425px) {
+  .header {
+    padding: 1rem 5px;
+  }
+}
